<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_back"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_12sdp"
                    app:srcCompat="@drawable/ic_back"
                    app:tint="@color/textSecondary"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/MText.Title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/login"
                    app:layout_constraintEnd_toStartOf="@id/btn_help"
                    app:layout_constraintStart_toEndOf="@id/btn_back" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_help"
                    app:tint="@color/textSecondary"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_12sdp"
                    android:src="@drawable/ic_add"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/parentPadding">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_google"
                    style="@style/MButton.LoginMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_google"
                    android:text="@string/login_google"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_fb"
                    style="@style/MButton.LoginMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standardMargin"
                    android:drawableStart="@drawable/ic_facebook"
                    android:text="@string/login_fb"
                    app:layout_constraintTop_toBottomOf="@id/btn_login_google" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_or"
                    style="@style/MText.Normal.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/parentPadding"
                    android:text="@string/or_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_login_fb" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/hairline"
                    android:layout_marginStart="@dimen/standardMargin"
                    android:background="@color/separator"
                    app:layout_constraintBottom_toBottomOf="@id/tv_or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_or"
                    app:layout_constraintTop_toTopOf="@id/tv_or" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/hairline"
                    android:layout_marginEnd="@dimen/standardMargin"
                    android:background="@color/separator"
                    app:layout_constraintBottom_toBottomOf="@id/tv_or"
                    app:layout_constraintEnd_toStartOf="@id/tv_or"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_or" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_username_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MText.Normal"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username_or_email"
                    android:backgroundTint="@color/separator"
                    app:layout_constraintTop_toBottomOf="@id/tv_or"
                    android:layout_marginTop="@dimen/longMargin"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MText.Normal"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/separator"
                    app:layout_constraintTop_toBottomOf="@id/et_username_email"
                    android:layout_marginTop="@dimen/standardMargin"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_toggle_password"
                    app:layout_constraintBottom_toBottomOf="@id/et_password"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:padding="@dimen/_3sdp"
                    app:tint="@color/textSecondary"
                    android:layout_marginBottom="@dimen/standardMargin"
                    app:layout_constraintEnd_toEndOf="@id/et_password"
                    app:srcCompat="@drawable/ic_invisible"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_marginTop="@dimen/standardMargin"
                    android:text="@string/forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_password"
                    style="@style/MText.Normal.Link"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:text="Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/longMargin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
                    style="@style/MButton.Medium"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_log_in_finger"
                    android:text="Masuk dengan Fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standardMargin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    style="@style/MButton.Secondary.Medium"/>


                <LinearLayout
                    android:layout_marginTop="@dimen/_32sdp"
                    app:layout_constraintStart_toStartOf="@id/btn_log_in_finger"
                    app:layout_constraintEnd_toEndOf="@id/btn_log_in_finger"
                    app:layout_constraintTop_toBottomOf="@id/btn_log_in_finger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MText.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Belum punya akun?" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_sign_up"
                        style="@style/MText.Normal.Link"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textSize="@dimen/textRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Daftar sekarang" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
